--- a/style.css
+++ b/style.css
@@ -181,8 +181,85 @@ font-size: 16px;
     color: white;
     font-family: textfont;
     margin-left: 4%;
+    padding-top: 9%;
 }
 
 .mind{
     color: #6c63ff;
 }
+
+.agreement{
+    margin-left: 4%;
+}
+
+.contactcontent{
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+}
+
+.nameemail{
+    display: flex;
+    
+}
+
+.email{
+    margin-left: 5%;
+}
+
+input{
+    width: 288px;
+    height: 48px;
+    border-radius: 5%;
+    background-color: #6c63ff;
+    border: none;
+    padding-left: 12px;
+    opacity: 0.5%;
+    margin-top: 12px;
+    color: white;
+}
+
+textarea{
+width: 594px;
+height: ;
+border-radius: 5%;
+background-color: #6c63ff;
+border: none;
+padding-left: 12px;
+opacity: 0.5%;
+margin-top: 12px;
+color: white;
+}
+
+label{
+    color: white;
+    font-family: textfont;
+    font-size: 20px;
+}
+
+
+
+
+.messagebutton{
+    padding: 12px;
+    background-color: #6c63ff;
+    border-radius: 25px;
+    border: none;
+    width: 120px;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+    }
+
+    footer{
+        display: flex;
+        justify-content: center;
+        padding-top: 10%;
+        border-top: 1px solid #6c63ff;
+    }
+    
+
+    .socials{
+        display: flex;
+        justify-content: center;
+    }
