changed images in about me and contact session

--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ font-size: 16px;
 
 .secondbutton{
     padding: 12px;
-    background-color: #6c63ff;
+    background-color: #ffb228;
     border-radius: 25px;
     border: none;
     width: 170px;
@@ -243,7 +243,7 @@ label{
 
 .messagebutton{
     padding: 12px;
-    background-color: #6c63ff;
+    background-color: #ffb228;
     border-radius: 25px;
     border: none;
     width: 120px;
